# chess-c

./: .gitignore  CMakeLists.txt  README.md
game/: HandmadeMath.h  arena.h  button.h  file.h  game.h  gfx.h  glfw_glue.c  glfw_glue.h  main.c  math.h  menu.h  textures.h  vertex.h
game.xcodeproj/: project.pbxproj
game/shaders/: default_ps.glsl  default_vs.glsl  figures_ps.glsl  figures_vs.glsl  line_ps.glsl  line_vs.glsl  menu_background_ps.glsl  menu_background_vs.glsl  menu_ps.glsl  menu_vs.glsl  square_ps.glsl  square_vs.glsl
